Patched for Crash on Android 12 and below because of hardcoded java method